Styling fixes for artist image not centered and moving around code.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,10 @@
 	padding-bottom: 30px;
 }
 
+.artist-image {
+	display: block;
+}
+
 .text-white {
 	color: white;
 }
